testing for aamas

--- a/_bib/2022-01-15-AAMAS.bib
+++ b/_bib/2022-01-15-AAMAS.bib
@@ -1,11 +1,9 @@
 ---
-title: Rawlsian Fairness in Online Bipartite Matching: Two-sided, Group, and Individual 
+title: Rawlsian Fairness in Online Bipartite Matching: Two-sided, Group and Individual 
 
 authors:
-  - seyed
   - sduppala
-  - john
-
+  
 extra:
 venue: AAMAS 2022
 link: https://arxiv.org/abs/2201.06021 
