copied from not working

--- a/_bib/2022-01-15-AAMAS.bib
+++ b/_bib/2022-01-15-AAMAS.bib
@@ -1,10 +1,14 @@
 ---
-title: Rawlsian Fairness in Online Bipartite Matching: Two-sided, Group and Individual 
+title: Fair Labeled Clustering 
+
 
 authors:
+  - seyed
   - sduppala
-  
+  - john
+  - brian
+
 extra:
-venue: AAMAS 2022
-link: https://arxiv.org/abs/2201.06021 
+venue: KDD 2022
+link: https://dl.acm.org/doi/abs/10.1145/3534678.3539451
 ---
