--- a/_bib/2022-01-15-AAMAS.bib
+++ b/_bib/2022-01-15-AAMAS.bib
@@ -1,5 +1,5 @@
 ---
-title: Fair Labeled Clustering 
+title: Rawlsian Fairness in Online Bipartite Matching: Two-sided, Group, and Individual 
 
 
 authors:
