final update to aamas

--- a/_bib/2022-01-15-AAMAS.bib
+++ b/_bib/2022-01-15-AAMAS.bib
@@ -1,7 +1,5 @@
 ---
-title: Rawlsian Fairness in Online Bipartite Matching: Two-sided, Group, and Individual 
-
-
+title: Rawlsian Fairness in Online Bipartite Matching, Two-sided, Group and Individual
 authors:
   - seyed
   - sduppala
