final update to website

--- a/_bib/2022-01-15-AAMAS.bib
+++ b/_bib/2022-01-15-AAMAS.bib
@@ -3,8 +3,9 @@ title: Rawlsian Fairness in Online Bipartite Matching, Two-sided, Group and Indi
 authors:
   - seyed
   - sduppala
+  - vedant
+  - aravind
   - john
-  - brian
 
 extra:
 venue: KDD 2022
