--- a/_posts/2022-08-16-KDD.md
+++ b/_posts/2022-08-16-KDD.md
@@ -5,4 +5,4 @@ date:   2022-08-16
 categories: post
 news: true
 --- 
-My co-author Seyed presented our work from our recent paper on Fair Labeled Clustering at KDD 2022, Washington D.C. 
+I was at KDD poster session for our recent paper on Fair Labeled Clustering at KDD 2022, Washington D.C.  
