updated some link

--- a/_bib/2022-01-15-AAMAS.bib
+++ b/_bib/2022-01-15-AAMAS.bib
@@ -8,6 +8,6 @@ authors:
   - john
 
 extra:
-venue: KDD 2022
+venue: AAMAS 2022 Extended Abstract
 link: https://dl.acm.org/doi/abs/10.1145/3534678.3539451
 ---
