--- a/_bib/2022-01-15-AAMAS.bib
+++ b/_bib/2022-01-15-AAMAS.bib
@@ -9,5 +9,6 @@ authors:
 
 extra:
 venue: AAMAS 2022 Extended Abstract
-link: https://dl.acm.org/doi/abs/10.1145/3534678.3539451
+link: https://arxiv.org/abs/2201.06021
+
 ---
