updated the arxiv version of papers

--- a/_bib/2019-06-17-SPAA.bib
+++ b/_bib/2019-06-17-SPAA.bib
@@ -13,6 +13,6 @@ authors:
 
 extra:
 venue: SPAA 2019
-link: https://dl.acm.org/doi/abs/10.1145/3323165.3323209
+link: https://arxiv.org/abs/1904.09283 
 
 ---
