--- a/_bib/2022-01-01-ORL.bib
+++ b/_bib/2022-01-01-ORL.bib
@@ -10,5 +10,5 @@ authors:
 
 extra:
 venue: Operation Research Letters 2022
-link: https://www.sciencedirect.com/science/article/pii/S0167637721001759 
+link: https://arxiv.org/abs/2112.05247
 ---
