--- a/_bib/2022-05-15-KDD.bib
+++ b/_bib/2022-05-15-KDD.bib
@@ -10,5 +10,6 @@ authors:
 
 extra:
 venue: KDD 2022
-link: https://dl.acm.org/doi/abs/10.1145/3534678.3539451
+link: https://arxiv.org/abs/2205.14358 
+
 ---
