--- a/_posts/2019-01-12-sos.md
+++ b/_posts/2019-01-12-sos.md
@@ -1,9 +1,10 @@
 ---
 layout: post
 title:  SOS;
-date:   2019-01-12
+date:   2022-12-01
 categories: post
-news: false
+news: true
 ---
-Heading to Baltimore this week for the [AMS short course](http://www.ams.org/meetings/short-courses/short-course-general) on 
-*Sum of Squares*. While I'm in the city, I'll also be visiting the theory group at Johns Hopkins for a day.
+Our paper titled Rawlsian Fairness in Online Bipartite Matching, Two-sided, Group and Individual got accepted to AAAI 2023!
+
+
