--- a/_posts/2022-12-12-aaai.md
+++ b/_posts/2022-12-12-aaai.md
@@ -5,5 +5,5 @@ date:   2022-12-01
 categories: post
 news: true
 ---
-Our paper titled ``Rawlsian Fairness in Online Bipartite Matching, Two-sided, Group and Individual'' got accepted to AAAI 2023!
+Our paper titled "Rawlsian Fairness in Online Bipartite Matching, Two-sided, Group and Individual'' got accepted to AAAI 2023!
 
